add: adição do get Integrantes, e IntegranteMaisUsado( necessário refatorar)